testsuite/tests/parser/should_fail/StringInterpolationInType.hs
{-# LANGUAGE DataKinds #-}
{-# LANGUAGE StringInterpolation #-}

type Test = s"hello ${x}"
