testsuite/tests/parser/should_fail/StringInterpolationInType.stderr
StringInterpolationInType.hs:4:13: error: [GHC-58481]
    parse error on input ‘s"’

